@@ -22,9 +22,9 @@
                 <param name="aspect" value="Container(300).ListItem.Property(widgetAspect)" />
                 <param name="label" value="$SKINSHORTCUTS[widgetName]" />
                 <param name="visible" value="String.IsEqual(Container(300).ListItem.Property(id),$SKINSHORTCUTS[id])" />
-                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' else 'false']" />
-                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' else 'false']" />
-                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' else 'false']" />
+                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' or widgetContent in 'Genres.xsp' or widgetContent in 'genres.xsp' else 'false']" />
+                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' or widgetContent in 'Studios.xsp' or widgetContent in 'studios.xsp' else 'false']" />
+                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' or widgetContent in 'years.xsp' or widgetContent in 'countries.xsp' or widgetContent in 'tags.xsp' or widgetContent in 'directors.xsp' or widgetContent in 'Years.xsp' or widgetContent in 'Countries.xsp' or widgetContent in 'Tags.xsp' or widgetContent in 'Directors.xsp' else 'false']" />
             </include>
         </controls>
     </other>
@@ -50,9 +50,9 @@
                 <param name="aspect" value="Container(300).ListItem.Property(widgetAspect.Widget1)" />
                 <param name="label" value="$SKINSHORTCUTS[widgetName]" />
                 <param name="visible" value="String.IsEqual(Container(300).ListItem.Property(id),$SKINSHORTCUTS[id])" />
-                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' else 'false']" />
-                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' else 'false']" />
-                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' else 'false']" />
+                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' or widgetContent in 'Genres.xsp' or widgetContent in 'genres.xsp' else 'false']" />
+                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' or widgetContent in 'Studios.xsp' or widgetContent in 'studios.xsp' else 'false']" />
+                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' or widgetContent in 'years.xsp' or widgetContent in 'countries.xsp' or widgetContent in 'tags.xsp' or widgetContent in 'directors.xsp' or widgetContent in 'Years.xsp' or widgetContent in 'Countries.xsp' or widgetContent in 'Tags.xsp' or widgetContent in 'Directors.xsp' else 'false']" />
             </include>
         </controls>
     </other>
@@ -78,9 +78,9 @@
                 <param name="aspect" value="Container(300).ListItem.Property(widgetAspect.Widget2)" />
                 <param name="label" value="$SKINSHORTCUTS[widgetName]" />
                 <param name="visible" value="String.IsEqual(Container(300).ListItem.Property(id),$SKINSHORTCUTS[id])" />
-                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' else 'false']" />
-                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' else 'false']" />
-                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' else 'false']" />
+                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' or widgetContent in 'Genres.xsp' or widgetContent in 'genres.xsp' else 'false']" />
+                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' or widgetContent in 'Studios.xsp' or widgetContent in 'studios.xsp' else 'false']" />
+                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' or widgetContent in 'years.xsp' or widgetContent in 'countries.xsp' or widgetContent in 'tags.xsp' or widgetContent in 'directors.xsp' or widgetContent in 'Years.xsp' or widgetContent in 'Countries.xsp' or widgetContent in 'Tags.xsp' or widgetContent in 'Directors.xsp' else 'false']" />
             </include>
         </controls>
     </other>
@@ -106,9 +106,9 @@
                 <param name="aspect" value="Container(300).ListItem.Property(widgetAspect.Widget3)" />
                 <param name="label" value="$SKINSHORTCUTS[widgetName]" />
                 <param name="visible" value="String.IsEqual(Container(300).ListItem.Property(id),$SKINSHORTCUTS[id])" />
-                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' else 'false']" />
-                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' else 'false']" />
-                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' else 'false']" />
+                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' or widgetContent in 'Genres.xsp' or widgetContent in 'genres.xsp' else 'false']" />
+                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' or widgetContent in 'Studios.xsp' or widgetContent in 'studios.xsp' else 'false']" />
+                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' or widgetContent in 'years.xsp' or widgetContent in 'countries.xsp' or widgetContent in 'tags.xsp' or widgetContent in 'directors.xsp' or widgetContent in 'Years.xsp' or widgetContent in 'Countries.xsp' or widgetContent in 'Tags.xsp' or widgetContent in 'Directors.xsp' else 'false']" />
             </include>
         </controls>
     </other>
@@ -134,9 +134,9 @@
                 <param name="aspect" value="Container(300).ListItem.Property(widgetAspect.Widget4)" />
                 <param name="label" value="$SKINSHORTCUTS[widgetName]" />
                 <param name="visible" value="String.IsEqual(Container(300).ListItem.Property(id),$SKINSHORTCUTS[id])" />
-                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' else 'false']" />
-                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' else 'false']" />
-                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' else 'false']" />
+                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' or widgetContent in 'Genres.xsp' or widgetContent in 'genres.xsp' else 'false']" />
+                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' or widgetContent in 'Studios.xsp' or widgetContent in 'studios.xsp' else 'false']" />
+                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' or widgetContent in 'years.xsp' or widgetContent in 'countries.xsp' or widgetContent in 'tags.xsp' or widgetContent in 'directors.xsp' or widgetContent in 'Years.xsp' or widgetContent in 'Countries.xsp' or widgetContent in 'Tags.xsp' or widgetContent in 'Directors.xsp' else 'false']" />
             </include>
         </controls>
     </other>
@@ -162,9 +162,9 @@
                 <param name="aspect" value="Container(300).ListItem.Property(widgetAspect.Widget5)" />
                 <param name="label" value="$SKINSHORTCUTS[widgetName]" />
                 <param name="visible" value="String.IsEqual(Container(300).ListItem.Property(id),$SKINSHORTCUTS[id])" />
-                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' else 'false']" />
-                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' else 'false']" />
-                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' else 'false']" />
+                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' or widgetContent in 'Genres.xsp' or widgetContent in 'genres.xsp' else 'false']" />
+                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' or widgetContent in 'Studios.xsp' or widgetContent in 'studios.xsp' else 'false']" />
+                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' or widgetContent in 'years.xsp' or widgetContent in 'countries.xsp' or widgetContent in 'tags.xsp' or widgetContent in 'directors.xsp' or widgetContent in 'Years.xsp' or widgetContent in 'Countries.xsp' or widgetContent in 'Tags.xsp' or widgetContent in 'Directors.xsp' else 'false']" />
             </include>
         </controls>
     </other>
@@ -190,9 +190,9 @@
                 <param name="aspect" value="Container(300).ListItem.Property(widgetAspect.Widget6)" />
                 <param name="label" value="$SKINSHORTCUTS[widgetName]" />
                 <param name="visible" value="String.IsEqual(Container(300).ListItem.Property(id),$SKINSHORTCUTS[id])" />
-                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' else 'false']" />
-                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' else 'false']" />
-                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' else 'false']" />
+                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' or widgetContent in 'Genres.xsp' or widgetContent in 'genres.xsp' else 'false']" />
+                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' or widgetContent in 'Studios.xsp' or widgetContent in 'studios.xsp' else 'false']" />
+                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' or widgetContent in 'years.xsp' or widgetContent in 'countries.xsp' or widgetContent in 'tags.xsp' or widgetContent in 'directors.xsp' or widgetContent in 'Years.xsp' or widgetContent in 'Countries.xsp' or widgetContent in 'Tags.xsp' or widgetContent in 'Directors.xsp' else 'false']" />
             </include>
         </controls>
     </other>
@@ -218,9 +218,9 @@
                 <param name="aspect" value="Container(300).ListItem.Property(widgetAspect.Widget7)" />
                 <param name="label" value="$SKINSHORTCUTS[widgetName]" />
                 <param name="visible" value="String.IsEqual(Container(300).ListItem.Property(id),$SKINSHORTCUTS[id])" />
-                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' else 'false']" />
-                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' else 'false']" />
-                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' else 'false']" />
+                <param name="genres" value="$PYTHON['true' if widgetContent in 'tvGenres' or widgetContent in 'movieGenres' or widgetContent in 'genres.xml' or widgetContent in 'Genres.xsp' or widgetContent in 'genres.xsp' else 'false']" />
+                <param name="studios" value="$PYTHON['true' if widgetContent in 'studios.xml' or widgetContent in 'Studios.xsp' or widgetContent in 'studios.xsp' else 'false']" />
+                <param name="text" value="$PYTHON['true' if widgetContent in 'years.xml' or widgetContent in 'country.xml' or widgetContent in 'tags.xml' or widgetContent in 'directors.xml' or widgetContent in 'special://videoplaylists/' or widgetContent in 'years.xsp' or widgetContent in 'countries.xsp' or widgetContent in 'tags.xsp' or widgetContent in 'directors.xsp' or widgetContent in 'Years.xsp' or widgetContent in 'Countries.xsp' or widgetContent in 'Tags.xsp' or widgetContent in 'Directors.xsp' else 'false']" />
             </include>
         </controls>
     </other>
