@@ -1,3 +1,7 @@
+[B]0.9.27[/B]
+SKINSHORTCUTS Fix enable / disable code when in skinshortcuts and adding item
+WIDGETS Add checks for playlists ending with name Genres.xsp, Studios.xsp, Countries.xsp etc
+
 [B]0.9.26[/B]
 VIEWTYPES - Fix for Big Posters with Codec Info on
 WIDGETS - Fix busy spinner for mouse mode
